refactor: 카테고리/태그 필터링 기능 성능 개선, 메서드 이름 조정. jpql 을 통한 디비 접근 횟수 감소로 효율 개선
메서드 명 기존에 비해 직관성 있게 수정.