@@ -11,14 +11,18 @@ import com.nhnacademy.bookstoreinjun.exception.DuplicateException;
 import com.nhnacademy.bookstoreinjun.exception.NotFoundNameException;
 import com.nhnacademy.bookstoreinjun.exception.PageOutOfRangeException;
 import com.nhnacademy.bookstoreinjun.repository.ProductCategoryRepository;
+import com.nhnacademy.bookstoreinjun.util.FindAllSubCategoriesUtil;
 import com.nhnacademy.bookstoreinjun.util.MakePageableUtil;
 import com.nhnacademy.bookstoreinjun.util.SortCheckUtil;
 import jakarta.validation.Valid;
 import java.time.LocalDateTime;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mapping.PropertyReferenceException;
 import org.springframework.stereotype.Service;
@@ -30,11 +34,32 @@ import org.springframework.transaction.annotation.Transactional;
 public class ProductCategoryServiceImpl implements ProductCategoryService {
     private final ProductCategoryRepository productCategoryRepository;
 
+    private final FindAllSubCategoriesUtil findAllSubCategoriesUtil;
+
     private final String TYPE = "productCategory";
 
     private final int DEFAULT_PAGE_SIZE = 10;
 
     private final String DEFAULT_SORT = "productCategoryId";
+
+    private CategoryGetResponseDto makeCategoryGetResponseDtoFromProductCategory(ProductCategory productCategory) {
+        return CategoryGetResponseDto.builder()
+                .productCategoryId(productCategory.getProductCategoryId())
+                .categoryName(productCategory.getCategoryName())
+                .parentProductCategory(productCategory.getParentProductCategory())
+                .build();
+    }
+
+    private Page<CategoryGetResponseDto> makeCategoryGetResponseDtoPage(Pageable pageable, Page<ProductCategory> productCategoryPage) {
+        int total = productCategoryPage.getTotalPages();
+        int requestPage = pageable.getPageNumber() + 1;
+
+        if (total != 0 && total < requestPage){
+            throw new PageOutOfRangeException(total, requestPage);
+        }
+        return productCategoryPage.map(this::makeCategoryGetResponseDtoFromProductCategory);
+    }
+
 
     public CategoryRegisterResponseDto saveCategory(CategoryRegisterRequestDto categoryRegisterRequestDto) {
         String parentCategoryName = categoryRegisterRequestDto.parentCategoryName();
@@ -75,109 +100,77 @@ public class ProductCategoryServiceImpl implements ProductCategoryService {
         }
     }
 
-
-    private CategoryGetResponseDto makeCategoryGetResponseDtoFromProductCategory(ProductCategory productCategory) {
-        return CategoryGetResponseDto.builder()
-                .productCategoryId(productCategory.getProductCategoryId())
-                .categoryName(productCategory.getCategoryName())
-                .parentProductCategory(productCategory.getParentProductCategory())
-                .build();
-    }
-
-    private Page<CategoryGetResponseDto> makeCategoryGetResponseDtoPage(Pageable pageable, Page<ProductCategory> productCategoryPage) {
-        int total = productCategoryPage.getTotalPages();
-        int maxPage = pageable.getPageNumber() + 1;
-
-        if (total < maxPage){
-            throw new PageOutOfRangeException(total, maxPage);
+    public CategoryGetResponseDto getCategoryDtoByName(String categoryName) {
+        ProductCategory productCategory = productCategoryRepository.findByCategoryName(categoryName);
+        if (productCategory == null){
+            throw new NotFoundNameException(TYPE, categoryName);
+        }else{
+            return makeCategoryGetResponseDtoFromProductCategory(productCategory);
         }
-        return productCategoryPage.map(this::makeCategoryGetResponseDtoFromProductCategory);
+    }
+
+    public List<CategoryGetResponseDto> getAllCategoryList() {
+        return productCategoryRepository.findAll()
+                .stream()
+                .map(this::makeCategoryGetResponseDtoFromProductCategory)
+                .toList();
     }
 
 
-    public List<CategoryGetResponseDto> getAllCategories() {
-        return productCategoryRepository.findAll().stream()
-                .map(category -> CategoryGetResponseDto.builder()
-                        .categoryName(category.getCategoryName())
-                        .parentProductCategory(category.getParentProductCategory())
-                        .build())
-                .collect(Collectors.toList());
-    }
-
-
-    public Page<CategoryGetResponseDto> getAllCategoryPage(@Valid PageRequestDto pageRequestDto) {
+    public Page<CategoryGetResponseDto> getAllCategoryPage(PageRequestDto pageRequestDto) {
         Pageable pageable = MakePageableUtil.makePageable(pageRequestDto, DEFAULT_PAGE_SIZE, DEFAULT_SORT);
 
         try{
             Page<ProductCategory> productCategoryPage = productCategoryRepository.findAll(pageable);
             return makeCategoryGetResponseDtoPage(pageable, productCategoryPage);
         }catch (PropertyReferenceException e) {
-           throw SortCheckUtil.sortExceptionHandle(pageable);
+           throw SortCheckUtil.ThrowInvalidSortNameException(pageable);
         }
     }
 
 
-    public List<CategoryGetResponseDto> getNameContainingCategories(String categoryName) {
-        return productCategoryRepository.findAllByCategoryNameContaining(categoryName).stream()
-                .map(category -> CategoryGetResponseDto.builder()
-                        .categoryName(category.getCategoryName())
-                        .parentProductCategory(category.getParentProductCategory())
-                        .build())
-                .collect(Collectors.toList());
+    public List<CategoryGetResponseDto> getNameContainingCategoryList(String categoryName) {
+        return productCategoryRepository.findAllByCategoryNameContaining(categoryName)
+                .stream()
+                .map(this::makeCategoryGetResponseDtoFromProductCategory)
+                .toList();
     }
 
 
-    public Page<CategoryGetResponseDto> getNameContainingCategoryPage(@Valid PageRequestDto pageRequestDto, String categoryName) {
+    public Page<CategoryGetResponseDto> getNameContainingCategoryPage(PageRequestDto pageRequestDto, String categoryName) {
         Pageable pageable = MakePageableUtil.makePageable(pageRequestDto, DEFAULT_PAGE_SIZE, DEFAULT_SORT);
         try{
             Page<ProductCategory> productCategoryPage = productCategoryRepository.findAllByCategoryNameContaining(pageable, categoryName);
             return makeCategoryGetResponseDtoPage(pageable, productCategoryPage);
         }catch (PropertyReferenceException e) {
-            throw SortCheckUtil.sortExceptionHandle(pageable);
+            throw SortCheckUtil.ThrowInvalidSortNameException(pageable);
         }
     }
 
 
-    public List<CategoryGetResponseDto> getSubCategories(String categoryName) {
-        ProductCategory parent = productCategoryRepository.findByCategoryName(categoryName);
-        if (parent == null) {
-            throw new NotFoundNameException(TYPE, categoryName);
-        }else {
-            return productCategoryRepository.findSubCategoriesByParentProductCategory(parent).stream()
-                    .map(category -> CategoryGetResponseDto.builder()
-                            .categoryName(category.getCategoryName())
-                            .parentProductCategory(category.getParentProductCategory())
-                            .build())
-                    .collect(Collectors.toList());
-        }
+    public List<CategoryGetResponseDto> getSubCategoryList(String categoryName) {
+        Set<ProductCategory> categorySet = new LinkedHashSet<>();
+        findAllSubCategoriesUtil.findAllSubcategories(categoryName, categorySet);
+
+        List<ProductCategory> categoryList = categorySet.stream().toList();
+
+        return categoryList
+                .stream()
+                .map(this::makeCategoryGetResponseDtoFromProductCategory)
+                .toList();
     }
 
     public Page<CategoryGetResponseDto> getSubCategoryPage(@Valid PageRequestDto pageRequestDto, String categoryName) {
-        ProductCategory parent = productCategoryRepository.findByCategoryName(categoryName);
-        if (parent == null) {
-            throw new NotFoundNameException(TYPE, categoryName);
-        }else {
-            Pageable pageable = MakePageableUtil.makePageable(pageRequestDto, DEFAULT_PAGE_SIZE, DEFAULT_SORT);
+        Set<ProductCategory> categorySet = new LinkedHashSet<>();
+        findAllSubCategoriesUtil.findAllSubcategories(categoryName, categorySet);
 
-            try{
-                Page<ProductCategory> productCategoryPage = productCategoryRepository.findAllByParentProductCategory(pageable, parent);
-                return makeCategoryGetResponseDtoPage(pageable, productCategoryPage);
-            }catch (PropertyReferenceException e) {
-                throw SortCheckUtil.sortExceptionHandle(pageable);
-            }
-        }
-    }
-
-
-    public CategoryGetResponseDto getCategoryDtoByName(String categoryName) {
-        ProductCategory productCategory = productCategoryRepository.findByCategoryName(categoryName);
-        if (productCategory == null){
-            throw new NotFoundNameException(TYPE, categoryName);
-        }else{
-            return CategoryGetResponseDto.builder()
-                    .categoryName(categoryName)
-                    .parentProductCategory(productCategory.getParentProductCategory())
-                    .build();
+        List<ProductCategory> categoryList = categorySet.stream().toList();
+        Pageable pageable = MakePageableUtil.makePageable(pageRequestDto, DEFAULT_PAGE_SIZE, DEFAULT_SORT);
+        try{
+            Page<ProductCategory> productCategoryPage = new PageImpl<>(categoryList, pageable, categoryList.size());
+            return makeCategoryGetResponseDtoPage(pageable, productCategoryPage);
+        }catch (PropertyReferenceException e) {
+            throw SortCheckUtil.ThrowInvalidSortNameException(pageable);
         }
     }
 }
